feat(deploy): backend listo para Railway con perfil prod, Dockerfile y CORS dinámico